🐛 Fix: 모바일 내 첫 번째 아이템 클릭 이슈에 따른 z-index 값 지정

--- a/src/pages/MyPage/components/IdolFavoriteList/styles.module.scss
+++ b/src/pages/MyPage/components/IdolFavoriteList/styles.module.scss
@@ -18,6 +18,8 @@
 
 .list_box {
   padding-inline: 50px;
+  position: relative;
+  z-index: 100;
 }
 
 .title {
